SoftwareArchitect.Auth.Api/Deploy/Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-01-deployment
  labels:
    app: otus-01-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-01-app
  template:
    metadata:
      labels:
        app: otus-01-app
    spec:
      containers:
        - name: otus-01
          image: eburger/otus_01:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 5
